# NoteCollector

./: .gitignore  CMakeLists.txt  CMakePresets.json  NoteCollectorSettings.txt  README.md  ToDo.txt  commit.bat  lexer.h  source.cpp  source.h
RemindConsole/: RemindConsole.sln
RemindConsole/RemindConsole/: RemindConsole.vcxproj  Source.cpp  TODO_and_Notes.txt
